[gd_scene load_steps=3 format=3 uid="uid://dxyqw8jv04e3k"]

[ext_resource type="Script" path="res://Scenes/UI/LetterMergeUI.gd" id="1_umfis"]
[ext_resource type="PackedScene" uid="uid://cv8d8blr5b6v7" path="res://Scenes/UI/drop_button.tscn" id="2_fkqr3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_umfis")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_top = 15

[node name="AlphabetContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LeftButton" parent="." instance=ExtResource("2_fkqr3")]
layout_mode = 1
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -100.0
offset_right = -89.0
offset_bottom = 100.0
grow_vertical = 2

[node name="LabelPlus" type="Label" parent="."]
layout_mode = 2
offset_left = 547.5
offset_top = 257.0
offset_right = 604.5
offset_bottom = 397.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "+"

[node name="RightButton" parent="." instance=ExtResource("2_fkqr3")]
layout_mode = 1
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = -100.0
offset_right = 294.0
offset_bottom = 100.0
grow_vertical = 2
